# htmx_axum

./: Cargo.toml  Readme.md
src/: main.rs
templates/: index.html
