[package]
name = "htmx_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version="0.7.5"}
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
